# claude-codex

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  biome.json  package-lock.json  package.json  tsconfig.json
.claude/: settings.json
crates/claude-codex-protocol/: Cargo.toml  README.md
crates/claude-codex-protocol/fixtures/: config-read.request.json  config-read.response.json  initialize.request.json  mcp-server-status-list.response.json  thread-start.request.json  turn-completed.notification.json  turn-started.notification.json
crates/claude-codex-protocol/src/: lib.rs
docs/: codex-app-remote-capability-matrix.md  contributing.md  index.md
examples/: README.md
python/: claude_sidecar.py
scripts/: AGENTS.md  acceptance-gui-ssh-localhost.mjs  acceptance-local-remote.mjs  acceptance-ssh-runtime-matrix.mjs  check-rust-protocol-fixtures.mjs  claude-codex-mode  claude-runtime-daemon.mjs  codex-shim  doctor.mjs  install-python-sdk.sh  probe-capabilities.mjs  probe-codex-cli-remote.mjs  smoke-real-claude.mjs
src/: AGENTS.md  adapter.mts  claude-capabilities.mts  claude-p-runtime.mts  codex-proxy-runtime.mts  github-queue.mts  http-agent-runtime.mts  mcp.mts  mock-runtime.mts  native-runtime.mts  provider-loop-config.mts  provider-loop-descriptor-schema.mts  provider-loop-descriptor-types.mts  provider-loop-descriptors.mts  provider-loop-selection.mts  python.mts  run-registry.mts  runtime-config.mts  runtime-factory.mts  server-helpers.mts  server.mts  sidecar-runtime.mts  socket-runtime.mts  store.mts  (+8 more)
(+28 files in other folders)
