[package]
name = "claude-codex-protocol"
version = "0.1.0"
description = "Experimental Codex app-server protocol smoke fixtures for claude-codex."
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true

